@@ -1,5 +1,5 @@
 <?php
-// $Id: simpletest.module,v 1.33.2.4.2.2 2008/08/06 02:24:35 boombatower Exp $
+// $Id: simpletest.module,v 1.33.2.4.2.3 2008/08/14 03:30:43 boombatower Exp $
 
 //require_once drupal_get_path('module', 'simpletest') . '/drupal_test_case.php';
 
@@ -62,6 +62,7 @@ function simpletest_test_form() {
   $uncategorized_tests = simpletest_get_all_tests();
   $tests = simpletest_categorize_tests($uncategorized_tests);
   if (isset($_SESSION['test_id'])) {
+    // Select all results using the active test ID used to group them.
     $results = db_query("SELECT * FROM {simpletest} WHERE test_id = %d ORDER BY test_class, message_id", $_SESSION['test_id']);
     unset($_SESSION['test_id']);
     $summary = array(
